fix padding bug

--- a/src/index.html
+++ b/src/index.html
@@ -576,7 +576,7 @@
         <!-- education background -->
         <div>
           <h1 class="text-center text-mineral">My Background</h1>
-          <p class="text-mineral">
+          <p class="text-mineral p-2">
             Two years ago, my journey towards software development began. Once I
             started learning to write code and I saw the potential of what I
             could create, my interest and commitment to learning more never
@@ -599,7 +599,7 @@
           >
             Read More
           </button>
-          <p class="text-mineral">
+          <p class="text-mineral p-2">
             What I know for sure is that my interest in software development has
             truly swept me away, and it's become hard for me to spend my time
             doing anything else. I am ready to take my passion and curiosity to
