fix: toolbox component does not grow horizontally

--- a/src/index.html
+++ b/src/index.html
@@ -67,90 +67,101 @@
       </div>
 
       <!-- tech icons -->
-      <div
-        class="
-          flex-shrink
-          lg:flex-shrink-0
-          max-w-lg
-          m-auto
-          lg:col-span-3
-          lg:bg-coffee
-          lg:border-2
-          lg:border-primary-200
-          lg:m-4
-          lg:p-4
-          lg:rounded
-        "
-      >
-        <h2 class="text-center text-xl pb-2">My Toolbox</h2>
+      <div class="flex items-center">
         <div
-          class="grid grid-cols-3 mx-3 gap-2 items-center justify-items-center"
+          class="
+            flex-shrink
+            lg:flex-shrink-0
+            max-w-lg
+            m-auto
+            lg:col-span-3
+            lg:bg-coffee
+            lg:border-2
+            lg:border-primary-200
+            lg:m-4
+            lg:p-4
+            lg:rounded
+          "
         >
-          <!-- react -->
-          <div data-tooltip="React" class="tooltip">
-            <img alt="react.js icon" src="./static/react.webp" />
-          </div>
-          <!-- redux -->
-          <div data-tooltip="Redux" class="tooltip">
-            <img
-              class="w-full h-full"
-              alt="redux icon"
-              src="./static/redux.svg"
-            />
-          </div>
-          <!-- django -->
-          <div data-tooltip="Django" class="tooltip">
-            <img alt="django icon" src="./static/django.svg" />
-          </div>
-          <!-- django REST framework -->
-          <div data-tooltip="Django REST Framework" class="tooltip-drf tooltip">
-            <img
-              class="rounded-md"
-              alt="django REST framework icon"
-              src="./static/drf.webp"
-            />
-          </div>
-          <!-- tailwind -->
+          <h2 class="text-center text-xl pb-2">My Toolbox</h2>
           <div
-            data-tooltip="Tailwind CSS"
-            class="tooltip-wide tooltip flex items-center col-span-2"
+            class="
+              grid grid-cols-3
+              mx-3
+              gap-2
+              items-center
+              justify-items-center
+            "
           >
-            <img
-              alt="Tailwind CSS icon"
-              src="./static/tailwind.svg"
-              class="w-full h-full"
-            />
-          </div>
-          <!-- javascript -->
-          <div data-tooltip="Javascript" class="tooltip">
-            <img
-              class="rounded-md"
-              alt="javascript icon"
-              src="./static/js.webp"
-            />
-          </div>
-          <!-- git -->
-          <div
-            data-tooltip="Git"
-            class="tooltip p-2 flex items-center bg-clay-100 rounded-md"
-          >
-            <img alt="git icon" src="./static/git.webp" />
-          </div>
-          <!-- typescript -->
-          <div data-tooltip="Typescript" class="tooltip-left-0 tooltip">
-            <img
-              class="rounded-md"
-              alt="typescript icon"
-              src="./static/ts.webp"
-            />
-          </div>
-          <!-- python -->
-          <div data-tooltip="Python" class="tooltip-wide tooltip col-span-2">
-            <img alt="python icon" src="./static/python.svg" />
-          </div>
-          <!-- PostgreSQL -->
-          <div data-tooltip="PostgreSQL" class="tooltip-left-0 tooltip">
-            <img alt="postgreSQL icon" src="./static/psql.webp" />
+            <!-- react -->
+            <div data-tooltip="React" class="tooltip">
+              <img alt="react.js icon" src="./static/react.webp" />
+            </div>
+            <!-- redux -->
+            <div data-tooltip="Redux" class="tooltip">
+              <img
+                class="w-full h-full"
+                alt="redux icon"
+                src="./static/redux.svg"
+              />
+            </div>
+            <!-- django -->
+            <div data-tooltip="Django" class="tooltip">
+              <img alt="django icon" src="./static/django.svg" />
+            </div>
+            <!-- django REST framework -->
+            <div
+              data-tooltip="Django REST Framework"
+              class="tooltip-drf tooltip"
+            >
+              <img
+                class="rounded-md"
+                alt="django REST framework icon"
+                src="./static/drf.webp"
+              />
+            </div>
+            <!-- tailwind -->
+            <div
+              data-tooltip="Tailwind CSS"
+              class="tooltip-wide tooltip flex items-center col-span-2"
+            >
+              <img
+                alt="Tailwind CSS icon"
+                src="./static/tailwind.svg"
+                class="w-full h-full"
+              />
+            </div>
+            <!-- javascript -->
+            <div data-tooltip="Javascript" class="tooltip">
+              <img
+                class="rounded-md"
+                alt="javascript icon"
+                src="./static/js.webp"
+              />
+            </div>
+            <!-- git -->
+            <div
+              data-tooltip="Git"
+              class="tooltip p-2 flex items-center bg-clay-100 rounded-md"
+            >
+              <img alt="git icon" src="./static/git.webp" />
+            </div>
+            <!-- typescript -->
+            <div data-tooltip="Typescript" class="tooltip-left-0 tooltip">
+              <img
+                class="rounded-md"
+                alt="typescript icon"
+                src="./static/ts.webp"
+              />
+            </div>
+            <!-- python -->
+            <div data-tooltip="Python" class="tooltip-wide tooltip col-span-2">
+              <img alt="python icon" src="./static/python.svg" />
+            </div>
+            <!-- PostgreSQL -->
+            <div data-tooltip="PostgreSQL" class="tooltip-left-0 tooltip">
+              <img alt="postgreSQL icon" src="./static/psql.webp" />
+            </div>
           </div>
         </div>
       </div>
